--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/x-data-grid": "^8.1.0",
+    "@tanstack/react-query": "^5.74.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
