--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^7.0.2",
     "@mui/x-data-grid": "^8.1.0",
     "@tanstack/react-query": "^5.74.11",
     "react": "^19.0.0",
