--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "apps/backend/api/index.ts",
+      "src": "api/index.ts",
       "use": "@vercel/node",
       "config": {
         "maxDuration": 10
@@ -12,7 +12,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "apps/backend/api/index.ts"
+      "dest": "api/index.ts"
     }
   ]
 }
