--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn api/index.ts",
-    "deploy": "vercel --prod"
+    "deploy": "vercel --prod",
+    "vercel-build": "echo Hello"
   },
   "keywords": [],
   "author": "",
